--- a/ui/src/main/res/layout/activity_login.xml
+++ b/ui/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context="com.wireguard.android.activity.LoginActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/bubbleNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bubble_name"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.119" />
 
     <EditText
-        android:id="@+id/bubble_name"
+        android:id="@+id/bubbleName"
         android:layout_width="88dp"
         android:layout_height="30dp"
         android:textSize="18sp"
@@ -31,6 +31,7 @@
         app:layout_constraintVertical_bias="0.159" />
 
     <TextView
+        android:id="@+id/userNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
@@ -41,7 +42,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/user_name"
+        android:id="@+id/userName"
         android:layout_width="88dp"
         android:layout_height="30dp"
         android:textSize="18sp"
@@ -53,6 +54,7 @@
         app:layout_constraintVertical_bias="0.276" />
 
     <TextView
+        android:id="@+id/passwordTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/password"
@@ -78,7 +80,7 @@
 
     <Button
         android:background="@color/secondary_color"
-        android:id="@+id/signIn_button"
+        android:id="@+id/signButton"
         android:layout_width="95dp"
         android:layout_height="49dp"
         android:layout_marginBottom="356dp"
@@ -90,6 +92,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/don_t_have_a_bubble"
@@ -101,7 +104,7 @@
         app:layout_constraintVertical_bias="0.571" />
 
     <Button
-        android:id="@+id/start_new_bubble_button"
+        android:id="@+id/startNewBubbleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start_new_bubble"
