--- a/ui/src/main/res/values/colors.xml
+++ b/ui/src/main/res/values/colors.xml
@@ -26,9 +26,12 @@
     <color name="info_tag_color">#00aa00</color>
     <color name="warning_tag_color">#aaaa00</color>
 
-    <color name="colorPrimaryDark">#C04B26</color>
+<!--    <color name="colorPrimaryDark">#C04B26</color>-->
 
     <!--Bubble Colors-->
     <color name="black">#333333</color>
     <color name="gray">#838383</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#bb0d45ff</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
