--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
     <!--Bubble dimens-->
     <dimen name="title">24sp</dimen>
     <dimen name="login_text_title">14sp</dimen>
+    <dimen name="margin_start_and_end">16dp</dimen>
+    <dimen name="margin_top">8dp</dimen>
+    <dimen name="edit_text_width">254dp</dimen>
+    <dimen name="edit_text_height">55dp</dimen>
 </resources>
