--- a/ui/src/main/res/layout/activity_login.xml
+++ b/ui/src/main/res/layout/activity_login.xml
@@ -33,11 +33,11 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
-            android:layout_width="54dp"
-            android:layout_height="67.42dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_start_and_end"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_start_and_end"
             android:src="@drawable/bubble_top"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,12 +49,12 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/signIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/josefin_sans_bold"
         android:text="@string/sign_in"
         android:textColor="@color/black"
@@ -64,27 +64,27 @@
         app:layout_constraintTop_toBottomOf="@+id/imageConstraint" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/bubbleNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/lato"
         android:text="@string/bubble_name"
         android:textColor="@color/black"
         android:textSize="@dimen/login_text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/signIn" />
 
     <EditText
         android:id="@+id/bubbleName"
-        android:layout_width="254dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/edit_text_width"
+        android:layout_height="@dimen/edit_text_height"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:background="@drawable/rectangle"
         android:hint="@string/enter_your_bubble_name"
         android:textAlignment="center"
@@ -92,15 +92,15 @@
         android:textSize="@dimen/login_text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/bubbleNameTitle" />
 
     <TextView
         android:id="@+id/findBubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/lato"
         android:text="@string/you_can_find_your_bubble_name_in_your_email"
         android:textColor="@color/gray"
@@ -110,12 +110,12 @@
         app:layout_constraintTop_toBottomOf="@+id/bubbleName" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/emailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/lato"
         android:text="@string/email"
         android:textColor="@color/black"
@@ -126,11 +126,11 @@
 
     <EditText
         android:id="@+id/userName"
-        android:layout_width="254dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/edit_text_width"
+        android:layout_height="@dimen/edit_text_height"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:background="@drawable/rectangle"
         android:hint="@string/email_you_used_to_sign_up"
         android:textAlignment="center"
@@ -138,15 +138,15 @@
         android:textSize="@dimen/login_text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTitle" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/passwordTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_start_and_end"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/lato"
         android:text="@string/password"
         android:textColor="@color/black"
@@ -157,11 +157,11 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="254dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/edit_text_width"
+        android:layout_height="@dimen/edit_text_height"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:background="@drawable/rectangle"
         android:hint="@string/your_password"
         android:textAlignment="center"
@@ -169,15 +169,15 @@
         android:textSize="@dimen/login_text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="257dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="@dimen/edit_text_width"
+        android:layout_height="@dimen/edit_text_height"
+        android:layout_marginStart="@dimen/margin_start_and_end"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:layout_marginBottom="24dp"
         android:background="@color/white"
         android:orientation="vertical"
