--- a/ui/src/main/res/layout/activity_login.xml
+++ b/ui/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
         android:fontFamily="@font/lato"
         android:text="@string/bubble_name"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signIn" />
@@ -89,7 +89,7 @@
         android:hint="@string/enter_your_bubble_name"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bubbleNameTitle" />
@@ -104,7 +104,7 @@
         android:fontFamily="@font/lato"
         android:text="@string/you_can_find_your_bubble_name_in_your_email"
         android:textColor="@color/gray"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bubbleName" />
@@ -119,7 +119,7 @@
         android:fontFamily="@font/lato"
         android:text="@string/email"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/findBubble" />
@@ -135,7 +135,7 @@
         android:hint="@string/email_you_used_to_sign_up"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTitle" />
@@ -150,7 +150,7 @@
         android:fontFamily="@font/lato"
         android:text="@string/password"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
@@ -166,7 +166,7 @@
         android:hint="@string/your_password"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="@dimen/login_text_title"
+        android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />
@@ -196,7 +196,7 @@
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/login_text_title" />
+            android:textSize="@dimen/text_title" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
