--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="margin_top">8dp</dimen>
     <dimen name="edit_text_width">254dp</dimen>
     <dimen name="edit_text_height">55dp</dimen>
+    <dimen name="bubble_connection_title_text_size">30sp</dimen>
+    <dimen name="icons_size">90dp</dimen>
 </resources>
