--- a/ui/src/main/res/layout/activity_main.xml
+++ b/ui/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
 
     <ImageView
+        android:id="@+id/union"
         android:layout_width="450dp"
         android:layout_height="770dp"
         android:layout_marginBottom="8dp"
@@ -50,6 +51,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bubbleConnectionTitle" />
 
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/log_out"
+        android:textColor="@color/logout"
+        android:textSize="@dimen/text_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <ImageView
         android:id="@+id/imageMyBubble"
