--- a/ui/src/main/res/layout/activity_login.xml
+++ b/ui/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_start_and_end"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/top_bubble_image_marginTop"
             android:layout_marginEnd="@dimen/margin_start_and_end"
             android:src="@drawable/bubble_top"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/signIn_title_marginTop"
         android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/josefin_sans_bold"
         android:text="@string/sign_in"
