--- a/ui/src/main/res/layout/activity_main.xml
+++ b/ui/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
 
     <ImageView
         android:id="@+id/union"
-        android:layout_width="450dp"
-        android:layout_height="770dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/union_width"
+        android:layout_height="@dimen/union_height"
+        android:layout_marginBottom="@dimen/union_marginBottom"
         android:scaleType="fitXY"
         android:src="@drawable/union"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/bubble_connection_marginTop"
         android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/josefin_sans"
         android:letterSpacing="-0.02"
@@ -55,9 +55,9 @@
         android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_start_and_end"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
         android:text="@string/log_out"
         android:textColor="@color/logout"
         android:textSize="@dimen/text_title"
@@ -86,7 +86,7 @@
         android:letterSpacing="-0.05"
         android:text="@string/bubble_status"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/myBubble_text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/constraints"
         app:layout_constraintEnd_toEndOf="@+id/imageMyBubble"
