--- a/ui/src/main/res/layout/error_layout.xml
+++ b/ui/src/main/res/layout/error_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/error_title_marginTop"
         android:layout_marginEnd="@dimen/margin_start_and_end"
         android:fontFamily="@font/josefin_sans"
         android:text="@string/error_title"
@@ -25,10 +25,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="420dp"
-        android:layout_height="400dp"
+        android:layout_width="@dimen/error_image_width"
+        android:layout_height="@dimen/error_image_height"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="@dimen/error_image_marginTop"
         android:layout_marginEnd="@dimen/margin_start_and_end"
         android:scaleType="fitXY"
         android:src="@drawable/error_face"
